src/scss/layout/_header.scss
header {
  padding: 0 0 30% 0;
}

nav {
  background-color: #222222;

  .container {
    display: flex;
    display: -webkit-flex;
    justify-content: space-between;
  }
}

.title-image {
  @include border-radius(50%);
  border: 2px solid #ffffff;
  display: block;
  max-width: 30px;
}

.nav-brand {
  display: flex;
  display: -webkit-flex;
  justify-content: flex-start;  // 左寄せ
  align-items: center;  // 垂直方向に中央寄せ

  .name {
    font-family: "Raleway", "Helvetica", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", sans-serif;
    color: #ffffff;
    font-size: 24px;
    font-weight: bold;
    padding-left: 15px;
  }
}

.nav {
  display: flex;
  display: -webkit-flex;
  justify-content: flex-end;  // 右寄せ
  align-items: center;  // 垂直方向に中央寄せ

  a, button {
    font-family: "Raleway", "Helvetica", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", sans-serif;
    font-size: 16px;
    background-color: rgba(0, 0, 0, 0);
    color: #ffffff;
    border-style: none;
    padding: 15px;
    display: block;
  }

  img {
    max-height: 40px;
  }
}

@media screen and (max-width: 600px) {
  nav > .container {
    flex-direction: column;
  }

  .nav {
    justify-content: space-between;
  }
}

#eyecatch {
  display: block;
  background: no-repeat 50% 0;
  background-size: cover;
  -webkit-background-size: cover;
  background-image: url("/img/eyecatch.jpg");
}

